<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_header_column1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:padding="8dp"
        android:text="@string/column_series"
        android:textColor="@android:color/white"
        android:gravity="start"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_header_column2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:padding="8dp"
        android:text="@string/column_reps_obj"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_header_column3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.45"
        android:padding="8dp"
        android:text="@string/column_weight_obj"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_header_column4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:padding="8dp"
        android:text="@string/column_reps"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_header_column5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/column_weight"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>


</LinearLayout>
